@@ -21,6 +21,14 @@
 </tr>
 </table>
 <p>
+2008-04-16  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> coders/jpeg.c (ReadJPEGImage): Don't use GetPixelCachePresent()
+        since it is not DLL-exported.
+
+</UL>
+<p>
 2008-04-15  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
